--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=job-portal
 server.port=1234
 
-spring.datasource.url=jdbc:mysql://localhost:3306/job-portal?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://13.203.155.108:3306/job-portal?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
